--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <main>
     <div id="login-section">
       <p>Clique abaixo para entrar com sua conta Spotify:</p>
-      <button onclick="redirectToSpotifyAuth()">Login com Spotify</button>
+      <button onclick="redirectToSpotifyAuth()">Login com Spotify789</button>
     </div>
 
     <div id="player-section" style="display: none;">
